# packaging_tutorial

./: README.md  setup.cfg
src/example_package/: example.py
src/example_pkg_shawlu95.egg-info/: PKG-INFO  SOURCES.txt
