[metadata]
name = example-pkg-shawlu95
version = 0.0.1
author = shawlu95
author_email = shawlu95@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shawlu95/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/shawlu95/packaging_tutorial
    Tutorial = https://packaging.python.org/tutorials/packaging-projects
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src